# asyncapi-rust

./: .gitignore  .update-notes-template.sh  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cliff.toml
.github/workflows/: ci.yml
asyncapi-rust/: Cargo.toml
asyncapi-rust-codegen/: Cargo.toml
asyncapi-rust-codegen/src/: asyncapi_attrs.rs  asyncapi_spec_attrs.rs  lib.rs  serde_attrs.rs
asyncapi-rust-models/: Cargo.toml
asyncapi-rust-models/src/: lib.rs
asyncapi-rust/examples/: actix_websocket.rs  asyncapi_derive.rs  axum_websocket.rs  chat_api.rs  debug_schema.rs  framework_integration_guide.rs  full_asyncapi_derive.rs  generate_spec_file.rs  message_integration.rs  schema_inspection.rs  server_variables.rs  test_oneof.rs
asyncapi-rust/src/: lib.rs
asyncapi-rust/tests/: integration_test.rs
docs/: RELEASING.md
scripts/: release.sh
