[workspace]
members = [
    "asyncapi-rust",
    "asyncapi-rust-codegen",
    "asyncapi-rust-models",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
authors = ["Mark Lilback <mark@lilback.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mlilback/asyncapi-rust"
homepage = "https://github.com/mlilback/asyncapi-rust"
documentation = "https://docs.rs/asyncapi-rust"
keywords = ["asyncapi", "websocket", "grpc", "codegen", "documentation"]
categories = ["web-programming", "asynchronous", "api-bindings", "development-tools"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
schemars = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
